# hrrr-icechunk

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  app.py  cdk.json  hrrr_sns_sqs_stack.py  pyproject.toml
cdk/: app.py  settings.py  stack.py
lambda/: Dockerfile  handler.py  hrrr.py  initialize_icechunk.py  pyproject.toml
lambda/append/: Dockerfile  handler.py
lambda/cleanup/: Dockerfile  handler.py  pyproject.toml
lambda/initialize/: Dockerfile  handler.py  pyproject.toml
