
[project]
name = "hrrr_icechunk"
version = "0.1.0"
description = "HRRR SNS/SQS Stack"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib",
    "constructs>=10.0.0",
]

[dependency-groups]
dev = [
  "pytest",
  "mypy",
  "nodeenv",
]

[tool.ruff]
line-length = 88
target-version = "py38"
exclude = ["cdk.out", ".venv", "node_modules"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
