[project]
name = "hrrr-lambda"
version = "0.1.0"
description = "Lambda function to process HRRR notifications"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools>=2.30.0",
    "aws-xray-sdk",
    "boto3>=1.34.0",
    #"virtualizarr>=2.1.2",
    "icechunk",
    "hrrrparser@git+https://github.com/virtual-zarr/hrrr-parser.git"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
